# spot-render-ia-auto-agents

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
agents/: __init__.py  devops_agent.py  self_healing_agent.py  sre_agent.py
agents/capabilities/: __init__.py  alert_manager.py  playbook_generator.py  runbook_generator.py
core/: __init__.py  agent_base.py  communication.py  llm.py  rag.py  snapshot.py
docs/: README.en.md  README.pt.md
docs/monitoring/: MONITORING.md
kubernetes/base/: k8s-agents-standalone.yaml  k8s-agents.yaml  kustomization.yaml
scripts/: deploy.sh
tests/: test_agents.py
